기획서, sequence diagram

--- a/기획서.md
+++ b/기획서.md
@@ -1,26 +1,63 @@
-# 현재 상황
+# 기획 서비스
+개발자를 위한 sns
 
+# 기획 배경
+## [서비스]
+- 기존 개발자 소통툴은 UI가 직관적이지 않고, 사용법이 복잡하여 단순화가 필요
+## [개발]
+- 대용량 데이터 처리에 대한 이해와 다양한 해결 방법 모색
+- 인스타그램 클론 코딩을 통해 운영되는 웹서비스 구조에 대한 이해
 
-# 해결할 문제
-사용자간 소통할 수 있는 커뮤니티가 필요하다. 
+# 프로젝트 목적
+## [서비스]
+- 인스타그램의 심플한 접근성을 적용하여 개발에 관심있는 사람들이 쉽게 접근 가능한 sns를 제공
+- 관리자페이지를 통한 편리한 관리
+## [개발]
+- 대용량 데이터, 대규모 트래픽 처리에 대한 다양한 패턴을
+- 이슈발생시 모니터링할 수 있는 운영툴 제공
+- 기능 확장성을 고려한 설계 
+- 배포 환경 구축
+- 서비스의 중단 없이 업데이트
 
-# 소프트웨어가 해결할 수 있는 목표
-**[서비스]** 사용자들이 게시물을 생성,삭제, 업데이트, 원하는 것을 조회할 수 있다.
-**[운영]** 사용자들의 action을 모니터링하고 안정적으로 서버를 운영한다.
+# 주요 기능
+## [서비스]
+- 로그인 페이지
+  * 로그인, 로그아웃
+- 피드 조회 페이지
+  * feed list(안 읽은 팔로우 게시물 + 추천 게시물)
+  * 좋아요
+  * 게시물 comments
+- 검색 페이지
+  * 계정 검색
+  * 태그 검색
+- 프로필 페이지
+  * 사용자 정보(Id, follower, following)
+  * 사용자 게시물 조회
+- 게시물 업로드 페이지
+  * 게시물(글 + 이미지 + 영상) crud
+- 기타 기능
+  * hash tag
+  * 팔로우/ 언팔로우
+## [운영]
+- 회원관리
+  * 회원정보 조회
+  * 회원정보 수정
+  * 회원정보 삭제
+- 게시물관리
+  * 게시물 숨김
+  * 게시물 복구
+  * 게시물 삭제
+
+- 로그관리
+  * 회원 가입, 탈퇴, 조회, 수정, 로그인, 로그아웃
+  * 좋아요 활성화, 비활성화
+  * 게시물 생성, 삭제, 수정, 조회
+  * 태그, 계정 검색
+  * 관리자 페이지 사용 내역
 
 # 제약 사항
 * 빠르게 필요한 데이터를 보여줘야 한다.(어느정도?)
 * 사용자들이 몰릴 때 안정적으로 서버가 터지면 안된다.(어느정도?)
 
-
-# 시스템의 제공 기능
-
-* 로그인
-* 로그아웃
-* 팔로우/ 언팔로우
-* 게시물(글 + 이미지 + 영상) crud
-* hash tag
-* hash tag로 searching
-* 게시물 comments
 
 [prototype 시연 연상](https://www.youtube.com/watch?v=JLsy4DCfsiw)
